<resources>
    <string name="app_name">启蒙号</string>
    <string name="network_error">网络异常，请检查网络状况后重试！</string>
    <string name="server_error">服务器异常，请检查网络状况后重试！</string>
    <string name="version">当前版本：V</string>
    <string name="update_info">更新说明：</string>
    <string name="phone_number">请输入手机号</string>
    <string name="password">请输入密码</string>
    <string name="get_password">忘记密码</string>
    <string name="login">登陆</string>
    <string name="logout">退出登录</string>
    <string name="auto_login">登陆中，请稍后...</string>
    <string name="register">注册</string>
    <string name="reset">重置密码</string>
    <string name="code">验证码</string>
    <string name="getCode">获取验证码</string>
    <string name="phone_number_null">手机号为空！</string>
    <string name="password_null">密码为空！</string>
    <string name="login_error">&#8194;账号或者密码有误</string>
    <string name="other_error">未知错误！</string>
    <string name="phonenumber_error">请输入11位手机号！</string>
    <string name="info_deficiency">请先完善信息！</string>
    <string name="getcode_success">获取成功，请注意接收短信！</string>
    <string name="user_exist">用户已经注册！</string>
    <string name="user_inexistence">用户不存在！</string>
    <string name="jump">跳过</string>
    <string name="ok">确定</string>
    <string name="preference_1">喜欢</string>
    <string name="preference">是否喜欢跳绳：</string>
    <string name="preference_2">不喜欢</string>
    <string name="preference_3">一般般</string>
    <string name="grade">年级：</string>
    <string name="grade0">年级</string>
    <string name="stature">身高：</string>
    <string name="weight">体重：</string>
    <string name="birthday">生日：</string>
    <string name="alarm_info1">HI!我是启蒙号呼叫小卫士，呼叫宝宝快来刷牙啦！</string>
    <string name="alarm_info2">启蒙号呼叫，小朋友该我们快乐刷小牙啦！</string>
    <string name="alarm_info3">启蒙号呼叫，呼叫小伙伴，约定时间到喽，快来刷牙啦！</string>
    <string name="alarm_info4">起床刷牙啦4</string>
    <string name="alarm_info5">起床刷牙啦5</string>
    <string name="alarm_info6">起床刷牙啦6</string>
    <string-array name="grades">
        <item>一年级</item>
        <item>二年级</item>
        <item>三年级</item>
        <item>四年级</item>
        <item>五年级</item>
        <item>六年级</item>
        <item>七年级</item>
        <item>八年级</item>
        <item>九年级</item>
    </string-array>
    <string-array name="alarm_info_array">
        <item>HI!我是启蒙号呼叫小卫士，呼叫宝宝快来刷牙啦！</item>
        <item>启蒙号呼叫，小朋友该我们快乐刷小牙啦！</item>
        <item>启蒙号呼叫，呼叫小伙伴，约定时间到喽，快来刷牙啦！</item>
        <item>起床刷牙啦4</item>
        <item>起床刷牙啦5</item>
        <item>起床刷牙啦6</item>
    </string-array>
    <string-array name="mins">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
    </string-array>
    <string-array name="award_list">
        <item>去动物园</item>
        <item>奖励一顿美食</item>
        <item>奖励带郊游一天</item>
        <item>奖励5元钱</item>
        <item>周末去游乐场</item>
        <item>奖励1支冰淇淋</item>
        <item>文具盒1个</item>
        <item>奖励10元</item>
        <item>奖励1个新书包</item>
        <item>挥妈妈做一件事</item>
        <item>奖励一件新衣服</item>
        <item>允许养一只宠物</item>
        <item>指挥爸爸做一件事</item>
        <item>奖励2元钱</item>
        <item>奖励买一台游戏机</item>
        <item>可免挨打一次</item>
        <item>奖励新的铅笔刀一个</item>
        <item>获得奖励20元</item>
        <item>奖励1支笔</item>
        <item>奖励周末看一场电影</item>
        <item>奖励宝贝1盒画笔</item>
        <item>获得50元奖励</item>
        <item>奖励买一个玩具</item>
        <item>奖励送一只手表</item>
        <item>奖励免做家务一次</item>
    </string-array>
    <string name="set_error">设置失败！</string>
    <string name="setting">设置</string>
    <string name="set_success">设置成功！</string>
    <string name="cancle">取消</string>
    <string name="title">请选择时间</string>
    <string name="commit">确定</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="hour">时</string>
    <string name="minute">分</string>
    <string name="second">秒</string>

    <string name="select_date">选择日期</string>
    <string name="current_date">当前日期</string>
    <string name="select_time">选择时间</string>
    <string name="current_time">当前时间</string>

    <string name="sport">运动</string>
    <string name="find">发现</string>
    <string name="community">社区</string>
    <string name="myself">我的</string>

    <string name="home">首页</string>
    <string name="my_drill">我的训练</string>
    <string name="tot">共</string>
    <string name="ge">个</string>
    <string name="ci">次</string>
    <string name="ta">天</string>
    <string name="tot_count">累计跳绳的个数</string>
    <string name="tot_sport">累计运动</string>
    <string name="tot2">累计</string>
    <string name="minutes">分钟</string>
    <string name="calorie">卡路里</string>
    <string name="no_link">未连接设备</string>
    <string name="start_sport">开始训练</string>
    <string name="learn_class">教学课堂</string>

    <string name="sport_log">训练记录</string>
    <string name="pk">PK竞技赛</string>
    <string name="field">场</string>
    <string name="win">胜</string>
    <string name="lost">败</string>
    <string name="timing">定时训练</string>
    <string name="num_jump">计数训练</string>
    <string name="free_jump">自由跳</string>
    <string name="device_list">点击设备进行连接</string>
    <string name="check_disconnect">（点击断开当前链接）</string>

    <string name="toothbrush">刷牙</string>
    <string name="sign_in">打卡记录</string>
    <string name="alarm_set">刷牙提醒</string>
    <string name="tot_brush_num">共刷牙</string>
    <string name="brush_time">刷牙时长：</string>
    <string name="set_time">提醒时间</string>
    <string name="set_voice">提醒语音</string>
    <string name="empty">这天没有刷牙哦~</string>
    <string name="di">第</string>
    <string name="chisuaya">次刷牙</string>
    <string name="morning">早上</string>
    <string name="night">晚上</string>
    <string name="voice1">提示语1</string>
    <string name="voice2">提示语2</string>
    <string name="voice3">提示语3</string>
    <string name="commit_device">同步至牙刷</string>
    <string name="alarm_info">最多可开启6个闹钟哦~</string>
    <string name="voice4">自定义语音</string>
    <string name="link_s">连接成功</string>
    <string name="link_f">连接失败，请重试！</string>
    <string name="link_d">连接断开！</string>
    <string name="set_name">给设备起个名字吧~</string>
    <string name="wait">请稍等...</string>
    <string name="currentDevice">当前设备：</string>
    <string name="my_device">我的设备</string>
    <string name="no_device">还未使用任何设备哦~</string>
    <string name="del_device">删除该设备</string>
    <string name="del_success">删除成功！</string>
    <string name="about_us">关于我们</string>
    <string name="hint">提示</string>
    <string name="hint_del">删除设备后，在下次连接设备后可重新绑定，确定删除？</string>
    <string name="clear_complete">同步完成</string>
    <string name="update_to_app">同步刷牙数据中...</string>
    <string name="update_to_server">上传服务器...</string>
    <string name="set_off_on">开启/关闭闹钟</string>
    <string name="set_award">选择对应天数的奖励呦~</string>
    <string name="set_award_ok">选好了</string>
    <string name="no_data">暂无数据</string>

</resources>
