<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="5dp"
        app:cardElevation="8dp"
        app:cardBackgroundColor="@color/white"
        app:cardUseCompatPadding="true"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">
            <TextView
                android:id="@+id/alarm_item1"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/alarm_info1"
                android:gravity="center"
                android:textSize="12dp"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/main_blue"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"/>
            <TextView
                android:id="@+id/alarm_item2"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/alarm_info2"
                android:gravity="center"
                android:textSize="12dp"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/main_blue"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"/>
            <TextView
                android:id="@+id/alarm_item3"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/alarm_info3"
                android:gravity="center"
                android:textSize="12dp"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/main_blue"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"/>
            <TextView
                android:visibility="gone"
                android:id="@+id/alarm_item4"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/alarm_info4"
                android:gravity="center"
                android:textSize="12dp"/>
            <View
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/main_blue"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"/>
            <TextView
                android:visibility="gone"
                android:id="@+id/alarm_item5"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/alarm_info5"
                android:gravity="center"
                android:textSize="12dp"/>
            <View
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/main_blue"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"/>
            <TextView
                android:visibility="gone"
                android:id="@+id/alarm_item6"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/alarm_info6"
                android:gravity="center"
                android:textSize="12dp"/>
            <View
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/main_blue"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>
